# legado

./: .env.dokploy.example  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.dokploy.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  cli.py  healthcheck.py  main.py
backend/app/application/schemas/: admin.py  auth.py  billing.py  common.py  memorial.py
backend/app/application/services/: admin_service.py  auth_service.py  billing_service.py  media_service.py  memorial_service.py
backend/app/core/: config.py  exceptions.py  identifiers.py  logging.py  security.py
backend/app/domain/: repositories.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/database/: base.py  session.py
backend/app/infrastructure/email/: __init__.py  sender.py
backend/app/infrastructure/models/: __init__.py  billing.py  enums.py  memorial.py  system.py  user.py
backend/app/infrastructure/repositories/: base.py  billing_repository.py  memorial_repository.py  user_repository.py
backend/app/infrastructure/services/: qr_service.py
backend/app/infrastructure/storage/: minio_client.py
backend/app/infrastructure/tasks/: celery_app.py  jobs.py
backend/app/presentation/: dependencies.py  middleware.py
backend/app/presentation/routers/: admin.py  api.py  auth.py  billing.py  health.py  media.py  memorials.py  public.py
backend/scripts/: start.sh
(+71 files in other folders)
